--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Python dependencies for Airflow
-astronomer-cosmos==1.7.1
-dbt-postgres==1.9.0
+# Pin dbt-core to avoid resolution issues
+dbt-core==1.8.0
+dbt-postgres==1.8.0
 mysql-connector-python==9.1.0
 pymysql==1.1.1
 pandas==2.2.3
